--- a/FormulaOneWebAPIProject/FormulaOneWebAPIProject.csproj
+++ b/FormulaOneWebAPIProject/FormulaOneWebAPIProject.csproj
@@ -96,6 +96,8 @@
     <Compile Include="Controllers\CircuitsController.cs" />
     <Compile Include="Controllers\DriversController.cs" />
     <Compile Include="Controllers\RacesController.cs" />
+    <Compile Include="Controllers\RacesScoresController.cs" />
+    <Compile Include="Controllers\ScoresController.cs" />
     <Compile Include="Controllers\TeamsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
